-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 16.0.0-beta2
-
None
-
-
4243c09a8 (master), b14e371cc (master)
The following plain C program:
extern void foo(); extern int bar; int main() { foo(); return bar; }
give the following linker errors (Compile Output pane):
gcc -c -pipe -fPIC -g -Wall -Wextra -DQT_QML_DEBUG -I../../../ExternC -I. -I/opt/Qt/6.7.3/gcc_64/mkspecs/linux-g++ -o main.o ../../main.c g++ -o ExternC main.o /usr/bin/ld: main.o: in function `main': /home/andre/tmp/ExternC/build/Desktop_Qt_6_7_3-Debug/../../main.c:7: undefined reference to `foo' /usr/bin/ld: /home/andre/tmp/ExternC/build/Desktop_Qt_6_7_3-Debug/../../main.c:9: undefined reference to `bar' collect2: error: ld returned 1 exit status make: *** [Makefile:245: ExternC] Error 1 17:48:20: The process "/usr/bin/make" exited with code 2. 17:48:20: Error while building/deploying project ExternC (kit: Desktop Qt 6.7.3) 17:48:20: When executing step "Make"
Both linker errors are shown in the Issues pane, but you cannot navigate to the line with a double click. (I think that has worked in earlier versions)
The first issue allows jumping to the line by opening the issue and clicking the link. The second issue does not allow that at all.
On a side note, in the Compile Output pane, the first linker error is clickable, the second one not. Maybe that is related.
- relates to
-
QTCREATORBUG-32503 No keyboard or previous/next button Navigation in Issues pane
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-32502 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 626432,2 | ProjectExplorer: Remove invalid check from LdParser | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 627703,2 | ProjectExplorer: Merge two regexes in LdParser | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |