ProjectExplorer: Remove invalid check from LdParser

It was added as a hotfix in
7b408a9a7ae86ecac3b4bff518104924e59bacf5, which was effectively
superseded by cf21db02a5d9f2065025d94ee7710623e047a4a2.

Task-number: QTCREATORBUG-32502
Change-Id: Iddc4850c25d4ad299e146eb6824efb32bebed659
Reviewed-by: Christian Stenger <christian.stenger@qt.io>